--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack-dev-server --config wp.dev.js --progress --colors --inline --watch ",
-        "build": "webpack -p --config ./wp.pro.js --progress --colors"
+        "start": "webpack-dev-server --config wp.dev.js --progress --colors --inline --watch --mode development",
+        "build": "webpack -p --config ./wp.pro.js --progress --colors ",
+        "reset": "git reset --hard"
     },
     "author": "boconganh@gmail.com",
     "license": "ISC",
     "dependencies": {
-        "jquery": "^1.12.4"
+        "jquery": "^3.3.1"
     },
     "devDependencies": {
-        "webpack": "^3.6.0",
-        "webpack-dev-server": "^2.9.1",
         "babel-core": "^6.25.0",
         "babel-loader": "^7.1.1",
         "babel-preset-env": "^1.6.0",
         "babel-preset-react": "^6.24.1",
-        "react": "^15.6.2",
-        "react-dom": "^15.6.2"
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
+        "webpack": "^4.2.0",
+        "webpack-cli": "^2.0.12",
+        "webpack-dev-server": "^3.1.1"
     }
 }
