--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack-dev-server --config wp.dev.js --progress --colors --inline --watch --mode development",
+        "start": "webpack-dev-server --config wp.dev.js --progress --colors --inline --watch --hot --mode development",
         "build": "webpack -p --config ./wp.pro.js --progress --colors ",
         "reset": "git reset --hard"
     },
     "author": "boconganh@gmail.com",
     "license": "ISC",
     "dependencies": {
+        "bootstrap": "^4.0.0",
         "jquery": "^3.3.1"
     },
     "devDependencies": {
@@ -19,8 +20,13 @@
         "babel-loader": "^7.1.1",
         "babel-preset-env": "^1.6.0",
         "babel-preset-react": "^6.24.1",
+        "css-loader": "^0.28.11",
+        "node-sass": "^4.8.3",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "sass-loader": "^6.0.7",
+        "style-loader": "^0.20.3",
+        "url-loader": "^1.0.1",
         "webpack": "^4.2.0",
         "webpack-cli": "^2.0.12",
         "webpack-dev-server": "^3.1.1"
