--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "author": "boconganh@gmail.com",
     "license": "ISC",
     "dependencies": {
-        "bootstrap": "^4.0.0",
-        "jquery": "^3.3.1"
+        "bootstrap": "^4.1.0",
+        "jquery": "1"
     },
     "devDependencies": {
         "babel-core": "^6.25.0",
@@ -21,6 +21,8 @@
         "babel-preset-env": "^1.6.0",
         "babel-preset-react": "^6.24.1",
         "css-loader": "^0.28.11",
+        "eslint": "^4.19.1",
+        "eslint-plugin-react": "^7.7.0",
         "node-sass": "^4.8.3",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
