--- a/package.json
+++ b/package.json
@@ -5,32 +5,40 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack-dev-server --config wp.dev.js --progress --colors --inline --watch --hot --mode development",
-        "build": "webpack -p --config ./wp.pro.js --progress --colors ",
+        "start": "webpack-dev-server --open --config webpack.dev.js --progress --colors --hot --inline",
+        "build": "webpack -p --config webpack.prod.js --progress --colors",
         "reset": "git reset --hard"
     },
     "author": "boconganh@gmail.com",
     "license": "ISC",
     "dependencies": {
         "bootstrap": "^4.1.0",
-        "jquery": "1"
+        "jquery": "1",
+        "react-router": "^4.2.0"
     },
     "devDependencies": {
         "babel-core": "^6.25.0",
         "babel-loader": "^7.1.1",
         "babel-preset-env": "^1.6.0",
         "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "clean-webpack-plugin": "^0.1.19",
+        "copy-webpack-plugin": "^4.5.1",
+        "css-hot-loader": "^1.3.9",
         "css-loader": "^0.28.11",
         "eslint": "^4.19.1",
         "eslint-plugin-react": "^7.7.0",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "file-loader": "^1.1.11",
         "node-sass": "^4.8.3",
+        "postcss-loader": "^2.1.4",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "sass-loader": "^6.0.7",
         "style-loader": "^0.20.3",
         "url-loader": "^1.0.1",
-        "webpack": "^4.2.0",
-        "webpack-cli": "^2.0.12",
-        "webpack-dev-server": "^3.1.1"
+        "webpack": "^3.10.0",
+        "webpack-dev-server": "^2.11.1",
+        "webpack-merge": "^4.1.1"
     }
 }
